--- a/capture-metrics/tsconfig.json
+++ b/capture-metrics/tsconfig.json
@@ -1,26 +1,37 @@
 {
   "compilerOptions": {
     "allowJs": true,
-    "allowSyntheticDefaultImports": true,
     "declaration": true,
     "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
     "jsx": "react",
     "lib": [
       "dom",
       "dom.iterable",
       "esnext"
     ],
-    "module": "esnext",
+    "module": "commonjs",
     "moduleResolution": "node",
-    "noEmit": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "target": "es5"
+    "noEmitOnError": true,
+    "noFallthroughCasesInSwitch": true,
+    "noImplicitReturns": true,
+    "noUnusedLocals": true,
+    "noUnusedParameters": true,
+    "outDir": "./dist",
+    "target": "es5",
+    "typeRoots": [
+      "./types",
+      "./node_modules/@types",
+      "../node_modules/@types"
+    ],
+    "types": [
+      "node",
+      "jest"
+    ]
   },
+  "exclude": [
+    "**/*.test.tsx"
+  ],
   "include": [
-    "src"
+    "src/**/*"
   ]
 }
