--- a/capture-metrics/package.json
+++ b/capture-metrics/package.json
@@ -11,9 +11,9 @@
     "esm/**"
   ],
   "scripts": {
-    "build": "npm run build:esm && npm run build:cjs",
+    "build": "rm -rf dist && rm -rf esm && yarn build:esm && yarn build:cjs && yarn tsc",
     "build:cjs": "ncc build src/index.ts -o dist -m -e react",
-    "build:esm": "tsc --outDir esm",
+    "build:esm": "tsc --module ES6 --outDir esm",
     "watch": "tsc --watch",
     "types:check": "tsc --noEmit",
     "format": "prettier --write \"{src,test,examples}/**/*.{ts,tsx}\"",
