--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "workspaces": {
     "packages": [
       "examples/**",
-      "capture-metrics"
+      "react-capture-metrics"
     ]
   },
   "scripts": {
