--- a/react-capture-metrics/package.json
+++ b/react-capture-metrics/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "build": "rm -rf dist && rm -rf esm && yarn build:esm && yarn build:cjs && yarn tsc",
     "build:cjs": "ncc build src/index.ts -s -o dist -m -e react",
-    "build:esm": "tsc --module ES6 --outDir esm",
+    "build:esm": "tsc --module ES6 --outDir esm --noEmit false",
     "watch": "tsc --watch",
     "types:check": "tsc --noEmit",
     "format": "prettier --write \"{src,test,examples}/**/*.{ts,tsx}\"",
@@ -39,6 +39,8 @@
     "react": "^16.11.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "^10.2.1",
     "@zeit/ncc": "0.20.5",
     "husky": "2.4.1",
     "lint-staged": "8.2.1",
