--- a/examples/with-nextjs/package.json
+++ b/examples/with-nextjs/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "react-capture-metrics": "latest",
+    "react-capture-metrics": "1.0.1",
     "next": "9.4.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
