--- a/examples/with-nextjs/package.json
+++ b/examples/with-nextjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "with-nextjs",
-  "version": "0.1.0",
+  "version": "1.0.2",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -8,9 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "react-capture-metrics": "1.0.1",
     "next": "9.4.4",
     "react": "16.13.1",
+    "react-capture-metrics": "^1.0.2",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27"
   }
