--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lerna:version": "lerna version --conventional-commits --yes",
-    "delete-version:local": "git tag -d $(git tag -l --contains HEAD)",
-    "delete-version:remote": "git push --delete origin $(git tag -l --contains HEAD)"
+    "lerna:version": "lerna version --conventional-commits"
   },
   "author": "",
   "license": "ISC",
