--- a/examples/with-nextjs/package.json
+++ b/examples/with-nextjs/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-capture-metrics": "^1.0.3",
+    "react-capture-metrics": "latest",
     "react-dom": "16.13.1",
     "react-spring": "^8.0.27"
   }
