--- a/package.json
+++ b/package.json
@@ -1,25 +1,59 @@
 {
-  "name": "workspace",
-  "version": "1.0.0",
-  "description": "",
-  "private": true,
-  "main": "index.js",
-  "directories": {
-    "example": "examples"
+  "name": "react-capture-metrics",
+  "version": "1.0.3",
+  "description": "React library for passing more properties to your analytics events",
+  "main": "./dist/index.js",
+  "module": "./esm/index.js",
+  "homepage": "https://github.com/stackshirts/react-capture-metrics/",
+  "react-native": "./esm/index.js",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist/**",
+    "esm/**"
+  ],
+  "scripts": {
+    "build": "rm -rf dist && rm -rf esm && yarn build:esm && yarn build:cjs && yarn tsc",
+    "build:cjs": "ncc build ../src/index.ts -s -o dist -m -e react",
+    "build:esm": "tsc --module ES6 --outDir esm --noEmit false",
+    "watch": "tsc --watch",
+    "types:check": "tsc --noEmit",
+    "format": "prettier --write \"{src,test,examples}/**/*.{ts,tsx}\"",
+    "lint": "eslint \"{src,test,examples}/**/*.{ts,tsx}\"",
+    "lint:fix": "eslint \"{src,test,examples}/**/*.{ts,tsx}\" --fix",
+    "test": "react-scripts test"
   },
-  "workspaces": {
-    "packages": [
-      "examples/**",
-      "react-capture-metrics"
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn types:check && yarn lint",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "npm run lint:fix",
+      "npm run format",
+      "git add"
     ]
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lerna:version": "lerna version --conventional-commits"
-  },
-  "author": "",
+  "author": "Morgan Intrator",
   "license": "ISC",
+  "peerDependencies": {
+    "react": "^16.11.0"
+  },
   "devDependencies": {
-    "lerna": "^3.22.1"
+    "@commitlint/cli": "^9.1.1",
+    "@commitlint/config-conventional": "^9.1.1",
+    "@testing-library/jest-dom": "4.2.4",
+    "@testing-library/react": "^10.2.1",
+    "@types/jest": "^26.0.7",
+    "@types/node": "^14.0.26",
+    "@types/react": "^16.9.43",
+    "@types/react-dom": "^16.9.8",
+    "@zeit/ncc": "0.20.5",
+    "husky": "^4.2.5",
+    "lint-staged": "8.2.1",
+    "react": "^16.11.0",
+    "react-scripts": "^3.4.1",
+    "typescript": "^3.9.7"
   }
 }
