--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "typeRoots": [
       "./types",
       "./node_modules/@types",
-      "../node_modules/@types"
+      "./node_modules/@types"
     ],
     "types": [
       "node",
@@ -38,6 +38,6 @@
     "noEmit": true
   },
   "include": [
-    "src"
+    "./src"
   ]
 }
