--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "scripts": {
     "build": "rm -rf dist && rm -rf esm && yarn build:esm && yarn build:cjs && yarn tsc",
-    "build:cjs": "ncc build ../src/index.ts -s -o dist -m -e react",
+    "build:cjs": "ncc build src/index.ts -s -o dist -m -e react",
     "build:esm": "tsc --module ES6 --outDir esm --noEmit false",
     "watch": "tsc --watch",
     "types:check": "tsc --noEmit",
