--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-capture-metrics",
-  "version": "1.0.4-canary.3",
+  "version": "1.1.0",
   "description": "React library for passing more properties to your analytics events",
   "main": "./dist/index.js",
   "module": "./esm/index.js",
