fix: use ts in source maps - [see link](https://www.carlrippon.com/emitting-typescript-source-maps/)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,8 @@
       "dom.iterable",
       "esnext"
     ],
-    "inlineSourceMap": true,
+    "sourceMap": true,
+    "inlineSources": true,
     "module": "esnext",
     "moduleResolution": "node",
     "noEmitOnError": true,
