--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "husky": "^4.2.5",
     "lint-staged": "8.2.1",
     "react": "^16.11.0",
+    "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1",
     "typescript": "^3.9.7"
   }
